Server/src/main/kotlin/com/example/p2p_stock/errors/OrderException.kt
package com.example.p2p_stock.errors

class NotFoundOrderException(message:String):RuntimeException(message)